# lf-3pi-template

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  flake.nix  main.c  shell.nix  test.sh
.github/workflows/: check-lf-prerelease.yml  ci.yml
robot-lib/: CMakeLists.txt  README.md  robot-lib.txt
robot-lib/src/: motors.c  motors.h
run/: build.sh  flash.sh
src/: AccelerometerDisplay.lf  Blink.lf  BumpDisplay.lf  EncoderDisplay.lf  GyroAngleDisplay.lf  GyroDisplay.lf  HelloPico.lf  HelloThread.lf  LineDisplay.lf  RobotTemplate.lf  Timer.lf
src/lib/: Bump.lf  Display.lf  EncoderToDistance_Template.lf  Encoders.lf  IMU.lf  Line.lf  MotorFeedback.lf  Motors.lf  MotorsWithFeedback.lf
src/test/: MotorFeedbackTest.lf  MotorTest.lf
test/: HelloPico.hex  run.ts
